--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/JoostKiens/bootsy-domo#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "config": "^1.24.0",
     "connect-history-api-fallback": "^1.3.0",
     "express": "^4.14.0",
