--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "connect-history-api-fallback": "^1.3.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "material-ui": "^0.16.6",
     "promise-polyfill": "^6.0.2",
     "python-shell": "^0.4.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "serviceworker-webpack-plugin": "^0.1.7",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
